# espmeter

./: .gitignore  README.md  checksize.sh  conf.lua  espmeter.sql  gascounter (copy).lua  gascounter.lua  gascounter.sql  i2c.lua  init.lua  last.php  main.c  main.h  memtools.lua  minicom.cap.old  notes.txt  ntp.lua  post.php  sleep.lua  tools.lua  twi.c  twi.h  tz.lua  upload.lst  upload.sh  webapi.lua
esp/: .gitignore  getlogs.sh  rmlogs.sh  upload.sh
esp/firmware/: flash.sh
esp/src/: conf.lua  espmeter.lua  gascounter.lua  init.lua  log.lua  memtools.lua  sleep.lua  tests.lua  tz.lua  webapi.lua
src/: conf.lua  gascounter.lua  init.lua  log.lua  memtools.lua  sleep.lua  sums.txt  tests.lua  timetest.lua  tz.lua  webapi.lua
tiny/: .gitignore  CMakeLists.txt  build.sh  checksize.sh  flash.sh  main.c  main.h  twi.c
web/: chartdata.php  config.php  dbconfig.php  get.php  index.html  last.php  parsetodb.php  post.php
